version tablet padding fixed

--- a/_src/assets/scss/layout/_structure.scss
+++ b/_src/assets/scss/layout/_structure.scss
@@ -8,6 +8,7 @@
         grid-template-rows: 1fr;  
         padding-top: rem(20);
         padding-right: rem(40);
+        padding-bottom: rem(20);
         background-image: linear-gradient(to bottom,$color-background-light, $color-white);
     }
 }
